<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="10dp">

			<TextView android:layout_height="wrap_content"
				android:textSize="20sp" android:textColor="#FFFFFF" android:text="@string/app_name_version"
				android:layout_width="fill_parent"></TextView>
			<TextView android:layout_height="wrap_content" android:text="@string/app_copyright"
				android:layout_width="fill_parent" android:layout_marginBottom="20dip"></TextView>
			<TextView android:layout_height="wrap_content" android:text="@string/about_text"
				android:layout_width="fill_parent" android:layout_marginBottom="20dip"></TextView>

</LinearLayout>